--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/LBXZ.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/LBXZ.css
@@ -9,13 +9,12 @@
     font-size: 14px;
     width: 150px;
     height: 60px;
-    vertical-align: middle
+    vertical-align: middle;
 }
 
-.LB:hover {
-    color: #5bc0de;
-    /*background-color: #fafafa;*/
-}
+    .LB:hover {
+        color: #5bc0de;
+    }
 
 .divLB {
     width: 900px;
@@ -37,4 +36,45 @@
 
 .trXL {
     border-bottom: 1px #f1f1f1 solid;
+}
+
+
+.div_top {
+    width: 100%;
+    height: 30px;
+    border-bottom: 1px solid #cccccc;
+    vertical-align: middle;
+    font-size: 12px;
+}
+
+.div_top_left {
+        width: 400px;
+    margin-left: 100px;
+    text-align: center;
+    height: 25px;
+    padding-top: 5px;
+    float:left;
+}
+
+.div_top_right {
+    width: 400px;
+    margin-left: 71.3%;
+    text-align: center;
+    height: 25px;
+    padding-top: 5px;
+    float:right;
+}
+
+.div_top_right_inner {
+    cursor: pointer;
+    float: left;
+    display: inline-block;
+    position: relative;
+}
+
+.div_top_right_dropdown_yhm {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: none;
 }
