--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
@@ -13,6 +13,10 @@
 </head>
 <body style="width: 100%; height: 100%; overflow-x:hidden;">
     <div id="divTop" class="div_top">
+        <div class="div_top_left">
+            <span class="span_dqxzq">@ViewData["XZQ"]</span>
+            [<span class="span_qhcs">切换城市</span>]
+        </div>
         <div class="div_top_right">
             <span class="span_top_right">
                 信息小镇首页
