--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LBXZ/LBXZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LBXZ/LBXZ.cshtml
@@ -16,7 +16,10 @@
 <body style="width: 100%; height: 100%;">
     <div>
         <div id="divTop" class="div_top">
-            <div class="div"></div>
+            <div class="div_top_left">
+                <span class="span_dqxzq">@ViewData["XZQ"]</span>
+                [<span class="span_qhcs">切换城市</span>]
+            </div>
             <div class="div_top_right">
                 <span class="span_top_right">
                     信息小镇首页
