--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LBXZ/LBXZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LBXZ/LBXZ.cshtml
@@ -20,11 +20,13 @@
                 <span class="span_dqxzq">@ViewData["XZQ"]</span>
                 [<span class="span_qhcs">切换城市</span>]
             </div>
+            <div id="div_XZQ" class="div_dropdown">
+            </div>
             <div class="div_top_right">
                 <span class="span_top_right">
                     信息小镇首页
                 </span>
-                <span class="span_top_right_split"></span>
+                <em class="span_top_right_split"></em>
                 <div class="div_top_right_inner">
                     <span class="span_top_right_sjdl"></span>
                     <span class="span_top_right">
