--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/YHGL.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/YHGL.css
@@ -13,21 +13,22 @@
     height: 25px;
     padding-top: 5px;
     float: left;
-    font-size:12px;
+    font-size: 12px;
 }
 
 .div_top_right {
-    width: 400px;
-    margin-left: 71.3%;
+    width: 360px;
+    margin-right: 12px;
     text-align: center;
     height: 25px;
     padding-top: 5px;
+    float: right;
 }
 
 .span_dqxzq {
     color: #ff6a00;
     cursor: default;
-    margin-right:5px;
+    margin-right: 5px;
 }
 
 .span_qhcs {
@@ -130,7 +131,7 @@
 .div_head_left {
     float: left;
     width: 120px;
-    margin-left: 200px;
+    margin-left: 140px;
     margin-top: 5px;
 }
 
@@ -157,7 +158,6 @@
     height: 80px;
     display: block;
     float: left;
-    margin-left: 100px;
     margin-top: 20px;
     vertical-align: middle;
 }
@@ -186,7 +186,7 @@
     height: 100%;
     float: left;
     width: 184px;
-    margin-left: 170px;
+    margin-left: 110px;
     text-align: center;
 }
 
@@ -497,7 +497,7 @@
     color: #fff;
     font-size: 16px;
     padding: 3px 12px;
-    margin-right: 100px;
+    margin-right: 290px;
     margin-top: 19px;
     cursor: pointer;
 }
