--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/GRZL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/GRZL.cshtml
@@ -82,7 +82,7 @@
             <div class="div_person_info_right">
                 <input class="input_person_info" id="input_person_info_yhm" maxlength="30" readonly="readonly" type="text" />
                 <img class="img_person_info" id="img_person_info_yhm" />
-                <span class="span_person_info_right" id="span_person_info_right_yhm">修改</span>
+                @*<span class="span_person_info_right" id="span_person_info_right_yhm">修改</span>*@
             </div>
         </div>
         <div class="div_person_info">
