--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WZCX/WZCX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WZCX/WZCX.cshtml
@@ -10,8 +10,10 @@
     <meta name="viewport" content="width=device-width" />
     <title></title>
     <link href="@Url.Content("~/Areas/Business/Css/WZCX/WZCX.css")" rel="stylesheet" />
+    <link href="@Url.Content("~/Areas/Business/Css/Common/XZQ.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Areas/Business/Scripts/jquery-ui-1.12.1.custom/jquery-ui.min.css")" rel="stylesheet" />
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/WZCX/WZCX.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/Common/XZQ.js")"></script>
 </head>
 <body>
     <div class="div_content_head">
