--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/_ListLayout.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/_ListLayout.cshtml
@@ -12,6 +12,7 @@
     <script src=@Url.Content("~/Areas/Business/Scripts/UEditor/ueditor.config.js")></script>
     <script src=@Url.Content("~/Areas/Business/Scripts/UEditor/ueditor.all.js")></script>
     <script src=@Url.Content("~/Areas/Business/Scripts/UEditor/lang/zh-cn/zh-cn.js")></script>
+    <script src="@Url.Content("~/Areas/Business/Scripts/UEditor/ueditor.js")"></script>
     @RenderSection("Section_Head", false)
 }
 @section Section_Body {
