--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_SP/FC_SP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_SP/FC_SP.cshtml
@@ -10,12 +10,48 @@
     <meta name="viewport" content="width=device-width" />
     <title></title>
     <link href="@Url.Content("~/Areas/Business/Css/FC/FC_SP.css")" rel="stylesheet" />
+    <link href="@Url.Content("~/Areas/Business/Css/Common/Top.css" )" rel="stylesheet" />
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/FC/FC_SP.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/FC/FC_SPYZ.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/FC/FC_SPZP.js")"></script>
 </head>
 <body>
     <div>
+        <div id="divTop" class="div_top">
+            <div class="div_top_left">
+                <span class="span_dqxzq" id="span_content_info_xzq">@ViewData["XZQ"]</span>
+                [<span class="span_qhcs" id="span_content_info_qhcs">切换城市</span>]
+            </div>
+            <div id="div_XZQ" class="div_dropdown">
+
+            </div>
+            <div class="div_top_right">
+                <span class="span_top_right">
+                    信息小镇首页
+                </span>
+                <span class="span_top_right_split"></span>
+                <div class="div_top_right_inner">
+                    <span class="span_top_right_sjdl"></span>
+                    <span class="span_top_right">
+                        手机登录
+                    </span>
+                </div>
+                <span class="span_top_right_split"></span>
+                <div class="div_top_right_inner" id="div_top_right_inner_yhm">
+                    <span class="span_top_right span_top_right_yhm_text" id="span_top_right_yhm_text">@ViewData["YHM"]</span>
+                    <span class="span_top_right_yhm" id="span_top_right_yhm_img"></span>
+                    <div class="div_top_right_dropdown_yhm" id="div_top_right_dropdown_yhm">
+                        <ul class="ul_top_right_yhm">
+                            <li class="li_top_right_yhm" onclick="ShowWDXX()">我的信息</li>
+                            <li class="li_top_right_yhm" onclick="ShowWDZH()">我的账户</li>
+                            <li class="li_top_right_yhm" onclick="ShowWDZJ()">我的资金</li>
+                            <li class="li_top_right_yhm" onclick="ShowSHGJ()">生活工具</li>
+                            <li class="li_top_right_yhm" onclick="Exit()">退出</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div id="divLBHead" style="margin-left: 15%; margin-top: 20px;">
             <table class="table" style="width: 100%; text-align: center;">
                 <tr>
@@ -160,10 +196,9 @@
                 </div>
                 <div class="divRight">
                     <span id="spanMJ" class="spanFWLX SRK" style="display: inline-block;">
-                        <input id="MJ" maxlength="9" column="MJ" class="inputLCFB spanFontColor" type="text" style="width: 124px" />
+                        <input class="inputLCFB spanFontColor" id="MJ" maxlength="9" column="MJ" type="text" />
+                        <span class="spanFontColor">㎡</span>
                     </span>
-                    平米
-                    <div id="divMJTip" class="Warn" style="z-index: 996; position: relative;"></div>
                 </div>
             </div>
             <div id="divXXXX" class="divSplit" style="display: block; text-align: left;">
