--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LBXZ/LBXZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LBXZ/LBXZ.cshtml
@@ -11,6 +11,7 @@
     <title></title>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/LBXZ.js")"></script>
     <link href="@Url.Content("~/Areas/Business/Css/LBXZ.css" )" rel="stylesheet" />
+    <link href="@Url.Content("~/Areas/Business/Css/Common/Top.css" )" rel="stylesheet" />
 </head>
 
 <body style="width: 100%; height: 100%;">
