--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
@@ -10,6 +10,7 @@
     <title></title>
     <link href="@Url.Content("~/Areas/Business/Css/YHGL.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Areas/Business/Css/Common/XZQ.css")" rel="stylesheet" />
+    <link href="@Url.Content("~/Areas/Business/Css/Common/Top.css" )" rel="stylesheet" />
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/YHGL.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/Common/XZQ.js")"></script>
 </head>
@@ -20,6 +21,7 @@
             [<span class="span_qhcs" id="span_content_info_qhcs">切换城市</span>]
         </div>
         <div id="div_XZQ" class="div_dropdown">
+
         </div>
         <div class="div_top_right">
             <span class="span_top_right">
