--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/XZQ.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/XZQ.css
@@ -1,4 +1,15 @@
-﻿.span_xzq {
+﻿.div_dropdown {
+    width: 522px;
+    height: 242px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    position: absolute;
+    top: 25px;
+    left: 100px;
+    display: none;
+}
+
+.span_xzq {
     display: inline-block;
     width: 130px;
     height: 30px;
