--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WZCX/WZCX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WZCX/WZCX.cshtml
@@ -30,7 +30,7 @@
                     <span class="span_content_info_xzq" id="span_content_info_xzq">福州</span>
                     <span class="span_content_info_qhcs" id="span_content_info_qhcs">[切换城市]</span>
                 </div>
-                <div id="div_XZQ" class="div_dropdown">
+                <div id="div_XZQ" class="div_dropdown" style="top:40px; left:0px;">
                 </div>
             </div>
         </div>
