--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/YHDLXX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/YHDLXX.css
@@ -11,7 +11,6 @@
 
 .div_body {
     width: 100%;
-    height: 578px;
     display: block;
     text-align: center;
     background-image: url(images/yhdlxx_background.jpg);
@@ -61,11 +60,15 @@
     color: #333;
     padding-top: 15px;
     font-family: Microsoft YaHei, SimHei, Arial, Helvetica, sans-serif;
+    bottom: 0;
+    width: 100%;
+    position: absolute;
     background-color: #000;
     opacity: 0.5;
     color: #fff;
     line-height: 34px;
 }
+
 
 .span_div_bottom_inner {
     font-size: 14px;
